// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLink button behavior renders a button if href is not specified and onClick is passed 1`] = `
<button
  class="euiLink emotion-euiLink-primary"
  type="button"
/>
`;

exports[`EuiLink color accent is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-accent"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color danger is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-danger"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color ghost is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-ghost"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color primary is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color subdued is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-subdued"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color success is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-success"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color text is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-text"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink color warning is rendered 1`] = `
<a
  class="euiLink emotion-euiLink-warning"
  href="#"
  rel="noreferrer"
/>
`;

exports[`EuiLink external links allows for target and external to be controlled independently 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink external links is set automatically if \`target="_blank"\` 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="emotion-EuiExternalLinkIcon"
    data-euiicon-type="popout"
  >
    External link
  </span>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink external links renders an icon and extra rel 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="#"
  rel="noreferrer"
>
  <span
    class="emotion-EuiExternalLinkIcon"
    data-euiicon-type="popout"
  >
    External link
  </span>
</a>
`;

exports[`EuiLink renders 1`] = `
<a
  aria-label="aria-label"
  class="euiLink testClass1 testClass2 emotion-euiLink-primary-euiTestCss"
  data-test-subj="test subject string"
  href="#"
  rel="noreferrer"
>
  <span>
    Hiya!!!
  </span>
</a>
`;

exports[`EuiLink supports disabled 1`] = `
<button
  class="euiLink emotion-euiLink-disabled"
  disabled=""
  type="button"
/>
`;
